--- a/pixel.html
+++ b/pixel.html
@@ -37,13 +37,13 @@
           <el-input id="email" v-model="form.email" placeholder="email"></el-input>
         </el-form-item>
         <el-form-item label="Age">
-          <el-select id="age" v-model="form.age" placeholder="age">
+          <el-select v-model="form.age" placeholder="age">
             <el-option label="18-" value="0"></el-option>
             <el-option label="18+" value="1"></el-option>
           </el-select>
         </el-form-item>
         <el-form-item>
-          <el-button id="submit_btn" type="primary" @click="onSubmit">Submit</el-button>
+          <el-button type="primary" @click="onSubmit">Submit</el-button>
         </el-form-item>
       </el-form>
     </el-row>
@@ -83,6 +83,12 @@
         },
         onSubmit() {
           console.log('submit!');
+          this.$message({
+            message: '表单提交成功',
+            type: 'success'
+          });
+          var url = location.pathname + '?result=submit_success';
+          history.pushState({url: url, title: document.title}, document.title, url);
         },
         onNextStep() {
           if (this.active_step++ > 2) this.active_step = 0;
